# sourcelink

./: .env  .gitignore  README.md
bruno/: Create Link.bru  Create Project.bru  Delete Link.bru  Delete Project.bru  Get Link.bru  Get Project.bru  Link Redirect.bru  List Projects.bru  bruno.json
bruno/environments/: Sourcelink Local.bru
crates/sourcelink-cli/: Cargo.toml
crates/sourcelink-cli/src/: error.rs  lang.rs  main.rs  parser.rs  substr.rs
crates/sourcelink-cli/src/parsers/: c.rs  cparser.rs  go.rs  lua.rs  mod.rs  pyparser.rs  python.rs  rust.rs
crates/sourcelink-server/: Cargo.toml
crates/sourcelink-server/src/: error.rs  main.rs  models.rs
migrations/: 20240509033552_init.sql
test/: example.c  example.go  example.h  example.hpp  example.jsx  example.lua  example.py  example.rs  example.tsx
